# mars-ai-server

./: .env.dev.example  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  langgraph.json  main.py  pyproject.toml  requirements-eval.txt  requirements.txt
docs/: architecture.md  code_guide.md  deploy_l40.md  interfaces.md  middleware_document_ingest.md  roadmap.md
eval_sets/: hr_sample.jsonl
sample_docs/: 경비규정.txt  국군조직법(법률)(제10821호)(20111015).md  해병대사령부 직제(대통령령)(제34504호)(20240514).md  휴가규정.md
scripts/: bulk_ingest.py  dev_setup.ps1  evaluate_rag.py  reindex_document.py
serving/: embedding_server.py  reranker_server.py  start_llm_dev.ps1  start_vllm.sh
serving/milvus-dev/: user.yaml
src/ax_rag/: __init__.py
src/ax_rag/indexer_graph/: __init__.py  chunking.py  graph.py  ingest.py  loaders.py  state.py
tests/integration_tests/: test_indexer.py  test_main_api.py  test_query_full.py  test_query_reduced.py  test_reindex.py  test_retrieval_full.py  test_retrieval_reduced.py  test_serving.py
tests/unit_tests/: test_acl.py  test_audit_log.py  test_bm25_store.py  test_budget.py  test_chunking.py  test_config.py  test_discharge_days.py  test_fusion.py  test_graph_branching.py  test_health_check.py  test_hwp_draft.py  test_hwp_export.py  test_ingest.py  test_ingest_jobs.py  test_loaders.py  test_main_documents.py  test_main_sse.py  test_plan_execution.py  test_requested_domain_scope.py  test_rerank_node.py  test_router_generate_verify_nodes.py  test_search_depth.py  test_serving_contracts.py  test_tool_fallback.py  test_verify_rules.py
(+50 files in other folders)
