[build-system]
requires = ["setuptools==75.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ax-rag-multiagent"
version = "0.1.0"
description = "A.X 내부 문서 RAG + 멀티 에이전트 (온프레미스 에어갭)"
requires-python = "==3.11.*"

[project.optional-dependencies]
# 개발 전용 도구 (런타임 의존성은 requirements.txt에 == 고정)
dev = [
    "pytest==8.3.4",
    "ruff==0.8.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle 오류
    "F",   # pyflakes
    "I",   # isort (임포트 정렬)
    "UP",  # pyupgrade (3.11 문법 현대화)
    "B",   # bugbear (흔한 버그 패턴)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# integration 마커는 기본 skip. 포함 실행은 `make test-all` (pytest -m "")
addopts = "-m 'not integration'"
markers = [
    "integration: 실제 로컬 서비스(vLLM/임베딩/리랭커/Milvus)가 필요한 테스트 (기본 skip)",
]
